force-app/main/default/objects/TwitterCalloutSetting__mdt/TwitterCalloutSetting__mdt.object-meta.xml
<CustomObject>
    <label>TwitterCalloutSetting</label>
    <pluralLabel>TwitterCalloutSettings</pluralLabel>
</CustomObject>