force-app/main/default/objects/TwitterCalloutSetting__mdt/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>ConsumerSecret</label>
    <length>132</length>
    <type>Text</type>
</CustomField>